--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,12 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.1
+Date: 2025-05-07
+  Changes:
+    - Changed the mod thumbnail.
+
+---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: 2025-05-06
   Features:
     - Initial Release
+
